--- a/projects/bundle_tutorial/single_page_book_app/package.json
+++ b/projects/bundle_tutorial/single_page_book_app/package.json
@@ -18,7 +18,8 @@
     "@codemirror/view": "^6.36.1",
     "codemirror": "^6.0.1",
     "marked": "^15.0.4",
-    "marked-base-url": "^1.1.6"
+    "marked-base-url": "^1.1.6",
+    "split.js": "^1.6.2"
   },
   "devDependencies": {
     "vite": "^6.0.5"
