--- a/projects/bundle_tutorial/single_page_book_app/package.json
+++ b/projects/bundle_tutorial/single_page_book_app/package.json
@@ -16,6 +16,7 @@
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/state": "^6.5.0",
     "@codemirror/view": "^6.36.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "codemirror": "^6.0.1",
     "marked": "^15.0.4",
     "marked-base-url": "^1.1.6",
